fixed bug where calendar was rendering off screen for some reason

--- a/res/styles.scss
+++ b/res/styles.scss
@@ -122,7 +122,7 @@ header {
     border-radius: 10px;
     color: #000;
     width: 100%;
-    max-width: 500px;
+    max-width: 600px;
     max-height: 100%;
 
     margin: 0 auto;
@@ -150,35 +150,20 @@ header {
 }
 
 .parallax {
-  perspective: 1px;
   height: 100vh;
   overflow-x: hidden;
   margin: 0;
   padding: 0;
   position: relative;
 
-  * {
-    transform-style: preserve-3d;
-  }
-
   .cabin-container {
     text-align: center;
     position: relative;
     height: 100vh;
-    z-index: -1;
-
-    .cabin {
-      // transform: translateZ(-1px) scale(2);
-      position: absolute;
-      top: 0;
-      left: 0;
-      // @include imageFill;
-      height: 100%;
-
-      @media screen and (max-width: 800px) {
-        transform: translate(-25%);
-      }
-    }
+    background: url("../img/gravity-falls.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 25%;
 
     .cabin-body {
       position: absolute;
